--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .collapsible {
-    background-color: rgb(49, 94, 146);
+    background-color: #217c92;
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -11,7 +11,7 @@
   }
   
   .active, .collapsible:hover {
-    background-color: rgb(49, 94, 146);
+    background-color: #217c92;
   }
   
   .collapsible:after {
@@ -33,4 +33,33 @@
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color:   rgb(46, 46, 46);;
+  }
+  .info{
+      border: 2px solid white;
+      background-color: #217c92;
+        padding: 0;
+        margin: 0;
+        margin-bottom: 7px;
+  }
+  h3{
+      display: flex;
+      justify-content: space-between;
+      padding:0px 10px;
+  }
+  .info2{
+    background-color: white;
+     border:2px solid black; 
+     width: 300px;
+     padding-left: 5px;
+     padding-top: 3px;
+     color: rgb(47, 51, 87);
+  }
+  #photo{
+    width: 250px;
+  }
+  .icon{
+    border: 2px solid white;
+    margin-left: 10px;
+    padding: 5px;
+    background-color: white;
   }
